--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -49,6 +49,14 @@
 	height:100px;
 }
 
+.gp_demodata_mini{
+	float:left;
+	max-width:75px;
+	padding:0px 0px;
+	border-left:2px solid grey;
+	height:40px;
+}
+
 
 .head_cap{
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
@@ -59,7 +67,6 @@
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 	font-size: 12px;
 	color:darkred;	
-	line-height: 1px;
 }
 
 .big_int{
