--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -79,7 +79,7 @@
 					Depression Prevalence
 				</span>
 				</div>
-				<span class="deprived" style="font-size:24px;">
+				<span class="deprived_mini" style="font-size:24px;">
 				{% if gp_info.qof > 0 %}
 				&nbsp;{{gp_info.qof|percentize}}%
 				{% else %}
