--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -55,7 +55,7 @@
 	margin-top:10px;
 	margin-bottom: 10px;
 	border-right:2px solid grey;
-	max-height:30px;
+	height:36px;
 }
 
 
@@ -84,9 +84,10 @@
 }
 .deprived_mini{
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
-	font-size: 24px;
+	font-size: 26px;
 	font-weight: bold;
 	margin-top:20px;
+	line-height: 70px;
 }
 
 
