--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -81,7 +81,7 @@
 				</div>
 				<span class="deprived_mini" >
 				{% if gp_info.qof > 0 %}
-				&nbsp;{{gp_info.qof|percentize}}%
+				{{gp_info.qof|percentize}}%
 				{% else %}
 				Not Available
 				{% endif %}
