--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -222,6 +222,8 @@ $(window).load(function () {
 	$( "#ideprive" ).click(function() {
   		$( "#deprive_dialog" ).dialog( "open" );
 	});
+	
+	$( "#prevale_dialog" ).dialog({ autoOpen: false, width: 540, maxHeight:500});
 	$( "#iprevale" ).click(function() {
   		$( "#prevale_dialog" ).dialog( "open" );
 	});
