--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -43,15 +43,16 @@
 }
 .gp_demodata2{
 	float:left;
-	max-width:130px;
-	padding:0px 20px;
+	max-width:135px;
+	padding-left:20px;
+	padding-right: 5px;
 	border-left:2px solid grey;
 	height:100px;
 }
 
 .gp_demodata_mini{
 	float:left;
-	max-width:70px;
+	max-width:75px;
 	margin-top:10px;
 	margin-bottom: 10px;
 	border-right:1px solid grey;
