--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -117,7 +117,7 @@
 </div>
 
 <br>
-<h4 class="h_break">Top Prescriptions: Antidepressant, Anti-anxiety & Analgesic Drugs</h4>
+<h4 class="h_break">Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Sedative</h4>
 <div id="table_container">
 <div id="table_div">
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.js' %}"></script>
@@ -135,8 +135,8 @@
 			<th>Written</th>
 			
 			<th><span class="table_sub"> Per 1,000 registered patients per month</span></th>
-			<th><span class="table_sub"> Rank within Deprivation Group&nbsp;<span class="info" id="idgroup"><img src="{% static 'rx/image/i.png' %}" ></span></span></th>
-			<th><span class="table_sub"> Rank among all N. Irish GPs&nbsp;<span class="info" ><img id="iagroup" src="{% static 'rx/image/i.png' %}" ></span></span></th>
+			<th><span class="table_sub"> Deprivation Group Rank&nbsp;<span class="info" id="idgroup"><img src="{% static 'rx/image/i.png' %}" ></span></span></th>
+			<th><span class="table_sub"> All N. Irish GPs Rank&nbsp;<span class="info" ><img id="iagroup" src="{% static 'rx/image/i.png' %}" ></span></span></th>
 		</tr>
 	</thead>
 	<tbody>
