--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -126,13 +126,13 @@
 	<thead class="zero">
 		<tr class="upper_th">
 			<td style="width:20px"></td>
-			<td>Prescriptions</td>
+			<td class="rx_writ">Prescriptions</td>
 		
 			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)</td>
 		</tr>
 		<tr class="lower_th">
 			<th>Drug</th>
-			<th>Written</th>
+			<th class="rx_writ">Written</th>
 			
 			<th><span class="table_sub"> Per 1,000 registered patients per month</span></th>
 			<th><span class="table_sub"> Deprivation Group Rank&nbsp;<span class="info" id="idgroup"><img src="{% static 'rx/image/i.png' %}" ></span></span></th>
