--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -126,8 +126,8 @@
 	<thead class="zero">
 		<tr class="upper_th">
 			<td style="width:20px"></td>
-			
-			<td ><span class="rx_writ">Prescriptions</span></td>
+			<td>	</td>
+			<td >Prescriptions</td>
 		
 			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)</td>
 		</tr>
