--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -127,13 +127,13 @@
 		<tr class="upper_th">
 			<td style="width:20px"></td>
 			<td></td>
-			<td >Prescriptions</td>
+			<td ><span class="rx_writ">Prescriptions</span></td>
 		
 			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)</td>
 		</tr>
 		<tr class="lower_th">
 			<th>Drug</th>
-			<th class="rx_writ">Class</th>
+			<th class="rx_class">Class</th>
 			<th class="rx_writ">Written</th>
 			
 			<th><span class="table_sub"> Per 1,000 registered patients per month</span></th>
