--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -133,7 +133,7 @@
 		</tr>
 		<tr class="lower_th">
 			<th>Drug</th>
-			<th class="rx_class">Class</th>
+			<th class="rx_class" style="width:100px;">Class</th>
 			<th class="rx_writ">Written</th>
 			
 			<th><span class="table_sub"> Per 1,000 registered patients per month</span></th>
