--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -132,7 +132,7 @@
 			<td class="over_hd" colspan="3">Prescription Rate (Defined Daily Doses)</td>
 		</tr>
 		<tr class="lower_th">
-			<th>Drug</th>
+			<th class="rx_chem">Drug</th>
 			<th class="rx_class" style="width:100px;">Class</th>
 			<th class="rx_writ">Written</th>
 			
