--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -143,11 +143,11 @@ th{
 }
 .rx_class{
 	font-size: 16px;
-	width:100px !important;
+	
 }
 
 .rx_chem{
-	width:175px !important;
+	
 }
 
 .table_sub:hover{
@@ -227,6 +227,7 @@ td a:hover{
 	font-size: 12px;
 	color:#555555;
 	font-style: italic;
+	width:70px;
 
 }
 
