--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -122,7 +122,15 @@
 <div id="table_div">
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.js' %}"></script>
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.scroller.js' %}"></script>
-<table id="top_drug" class="tablesorter">	
+<table id="top_drug" class="tablesorter">
+	<colgroup>
+	<col style="width:175px;">
+	<col style="width:100px;">
+	<col style="width:100px;">
+	<col style="width:175px;">
+	<col style="width:130px;">
+	<col style="width:auto;">
+	</colgroup>	
 	<thead class="zero">
 		<tr class="upper_th">
 			<td></td>
