--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -117,14 +117,14 @@
 </div>
 
 <br>
-<h4 class="h_break">Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Sedative</h4>
+<h4 class="h_break">Top Prescriptions: Antidepressant, Anti-anxiety, Analgesic, Hypnotic</h4>
 <div id="table_container">
 <div id="table_div">
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.js' %}"></script>
 	<script type="text/javascript" src="{% static 'rx/js/jquery.tablesorter.scroller.js' %}"></script>
 <table id="top_drug" class="tablesorter">
 	<colgroup>
-	<col style="width:165px;">
+	<col style="width:160px;">
 	<col style="width:100px;">
 	<col style="width:90px;">
 	<col style="width:180px;">
