1-27-13 54th today... And goodnight

--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -215,7 +215,7 @@
 
 <div id="deprive_dialog" class="help_dialog" title="Area Deprivation"><p>Area deprivation is assigned according to the employment and income deprivation scores assessed by the Northern Ireland Statistics and Research Agency at the postcode of each GP. <br><br>Groups are determined by quartiles of deprivation scores and range Most-More-Less-Least deprived.</div>
 
-<div id="prevale_dialog" class="help_dialog" title="Depression Prevalence"><p>Depression prevalence is a measure of the percentage of patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework program, which is a voluntary incentive scheme included in the General Medical Services Contract. Read more <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>.</div>
+<div id="prevale_dialog" class="help_dialog" title="Depression Prevalence"><p>Depression prevalence is a measure of the percentage of registered patients ever having been coded for depression by a GP. It is assessed as part of the Quality and Outcomes Framework, which is a voluntary incentive scheme included in the General Medical Services Contract. Read more about prevalence statistics <a href="http://www.dhsspsni.gov.uk/statistics_and_research-qof-prevalence">here</a>. QOF data for GPs can be found <a href="http://www.gpcontract.co.uk/">here</a>.</div>
 
 
 <div id="dgroup_dialog" class="help_dialog" title="Deprivation Rank"><p>This GP's prescription rate ranked against all GPs within the same deprivation group that have prescribed this medicine in Northern Ireland.</div>
