--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -38,7 +38,7 @@
 
 <br>
 <div id="searchdiv">
-<h3 class="searchtitle">Search our data for individual drugs or GPs.</h3>
+<h3 class="searchtitle">Search the data for individual drugs or GPs.</h3>
 {% if search_error %}
 	<form method="get" action="/prescript/drugs/">
 {% else %}
