--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -137,6 +137,14 @@
 {% endblock %}
 
 
+<div id="warning">
+<table>
+	<tr>
+	<td class="warn_head">WARNING</td>
+	<td valign="middle">The data and information presented in this report are for the purpose of providing general information only. Information on particular drugs should not be considered exhaustive or necessarily applicable to your individual health. DO NOT make health care descisions based on this report alone. We're not doctors.</td>
+	</tr>
+</table>
+</div>
 
 
 <!-- ******** TEMPLATING Begin ******** -->
