--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -36,7 +36,10 @@
 <p>Sir Tristram, violer d’amores, fr’over the short sea, had passen-core rearrived from North Armorica on this side the scraggy isthmus of Europe Minor to wielderfight his penisolate war: nor had topsawyer’s rocks by the stream Oconee exaggerated themselse to Laurens County’s gorgios while they went doublin their mumper all the time: nor avoice from afire bellowsed mishe mishe to tauftauf thuartpeatrick not yet, though venissoon after, had a kidscad buttended a bland old isaac: not yet, though all’s fair in vanessy, were sosie sesthers wroth with twone nathandjoe. Rot a peck of pa’s malt had Jhem or Shen brewed by arclight and rory end to the regginbrow was to be seen ringsome on the aquaface.
 
 
-<br>
+
+
+
+<br><br>
 <div id="searchdiv">
 <h3 class="searchtitle">Search the data for individual drugs or GPs.</h3>
 {% if search_error %}
@@ -124,14 +127,28 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 
 <div class="drugs_list">
-<h4>See more info on common antidepressants like:</h4>
+<h4>More information on common antidepressants like:</h4>
 <ul>
 	<li>
-		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
+		<a href="{% url 'rx.views.drug' 'Venlafaxine' %}">Venlafaxine</a> also prescribed under the brands Vensir, Efexor and Venlalic
 	</li>
 	<li>
-		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+		<a href="{% url 'rx.views.drug' 'Escitalopram' %}">Escitalopram</a> also prescribed under the brand Cipralex
 	</li>
+
+	<li>
+		<a href="{% url 'rx.views.drug' 'Fluoxetine' %}">Fluoxetine</a> also prescribed under the brand Prozac
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Sertraline' %}">Sertraline</a> also prescribed under the brand Lustral
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Mirtazapine' %}">Mirtazapine</a> also prescribed under the brand Zispin
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Citalopram' %}">Citalopram</a> also prescribed under the brand Cipramil
+	</li>
+
 
 </ul>
 
@@ -146,7 +163,7 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 <h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
 	<div id="vizblock2"></div>
 	<br>
-The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hover to see comparison with GPs in England and Wales. Click to pause the animation.
+The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hover over bars to see comparisons with GPs in England and Wales. Click to pause the animation.
 </div>
 
 
@@ -159,14 +176,18 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 <p>What clashes here of wills gen wonts, oystrygods gaggin fishy-gods! Brékkek Kékkek Kékkek Kékkek! Kóax Kóax Kóax! Ualu Ualu Ualu! Quaouauh! Where the Baddelaries partisans are still out to mathmaster Malachus Micgranes and the Verdons cata-pelting the camibalistics out of the Whoyteboyce of Hoodie Head. Assiegates and boomeringstroms. Sod’s brood, be me fear! Sanglorians, save! Arms apeal with larms, appalling. Killykill-killy: a toll, a toll. What chance cuddleys, what cashels aired and ventilated! What bidimetoloves sinduced by what tegotetab-solvers! What true feeling for their’s hayair with what strawng voice of false jiccup! O here here how hoth sprowled met the duskt the father of fornicationists but, (O my shining stars and body!) how hath fanespanned most high heaven the skysign of soft advertisement! But was iz? Iseut? Ere were sewers? The oaks of ald now they lie in peat yet elms leap where askes lay. Phall if you but will, rise you must: and none so soon either shall the pharce for the nunce come to a setdown secular phoenish.</p>
 
 <div class="drugs_list">
-<h4>Check out the data on common anti-anxiety drugs like:</h4>
+<h4>See more data on common anti-anxiety drugs like:</h4>
 <ul>
 	<li>
 		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
 	</li>
 	<li>
-		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+		<a href="{% url 'rx.views.drug' 'Buspirone' %}">Buspirone</a> also prescribed under the brand BuSpar
 	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Lorazepam' %}">Lorazepam</a>
+	</li>
+
 
 </ul>
 
@@ -178,22 +199,30 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 <p>Bygmester Finnegan, of the Stuttering Hand, freemen’s mau-rer, lived in the broadest way immarginable in his rushlit toofar — back for messuages before joshuan judges had given us numbers or Helviticus committed deuteronomy (one yeastyday he sternely struxk his tete in a tub for to watsch the future of his fates but ere he swiftly stook it out again, by the might of moses, the very wat-er was eviparated and all the guenneses had met their exodus so that ought to show you what a pentschanjeuchy chap he was!) and during mighty odd years this man of hod, cement and edi-fices in Toper’s Thorp piled buildung supra buildung pon the banks for the livers by the Soangso. He addle liddle phifie Annie ugged the little craythur. Wither hayre in honds tuck up your part inher. Oftwhile balbulous, mithre ahead, with goodly trowel in grasp and ivoroiled overalls which he habitacularly fondseed, like Haroun Childeric Eggeberth he would caligulate by multiplicab-les the alltitude and malltitude until he seesaw by neatlight of the liquor wheretwin ’twas born, his roundhead staple of other days to rise in undress maisonry upstanded (joygrantit!), a waalworth of a skyerscape of most eyeful hoyth entowerly, erigenating from next to nothing and celescalating the himals and all, hierarchitec-titiptitoploftical, with a burning bush abob off its baubletop and with larrons o’toolers clittering up and tombles a’buckets clottering down.</p>
 
 <div class="drugs_list">
-<h4>Read more about common analgesics like:</h4>
+<h4>More about common analgesics and sedatives like:</h4>
 <ul>
 	<li>
-		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
+		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Maxitram, Mabron and Zydol
 	</li>
 	<li>
-		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+		<a href="{% url 'rx.views.drug' 'Oxycodone' %}">Oxycodone</a> also prescribed under the brands OxyContin and OxyNorm
 	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Zopiclone' %}">Zopiclone</a> also prescribed under the brand Zimovane
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Temazepam' %}">Temazepam</a>
+	</li>
+
 
 </ul>
 
 </div>
 
 
-<br>
-<br>
+
+
+
 
 <!--Search box script-->
 <script type="text/javascript">
