--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -140,8 +140,8 @@
 <div id="warning">
 <table>
 	<tr>
-	<td class="warn_head">WARNING</td>
-	<td valign="middle">The data and information presented in this report are for the purpose of providing general information only. Information on particular drugs should not be considered exhaustive or necessarily applicable to your individual health. DO NOT make health care descisions based on this report alone. We're not doctors.</td>
+	<td class="warn_head">PLEASE</td>
+	<td>Please don't make health care decisions based on this report, alone. We're not doctors. The data presented here are for the purpose of broad consideration. Information on particular drugs should not be considered exhaustive or necessarily applicable to your individual health.</td>
 	</tr>
 </table>
 </div>
