--- a/prescript/static/rx/css/template.css
+++ b/prescript/static/rx/css/template.css
@@ -400,10 +400,11 @@ svg:not(:root) { overflow: hidden }
 
 
 #warning{
+  width:850px;
   float:left;
   clear:both;
-  margin:20px 20px 20px;
-  padding:0px 10px;
+  margin:20px 50px 20px;
+  padding:0px 20px;
   color:#800000;
   font-family: monospace;
   font-size: 12px;
@@ -413,14 +414,13 @@ svg:not(:root) { overflow: hidden }
   vertical-align:middle;
 }
 
-.warn_head{
+td.warn_head{
   background-color: #800000;
   font-family: monospace;
   color:white;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: bold;
-  width: 210px;
+  width: 100px;
   padding:5px;
   line-height: 75%;
-  
 }
