--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -141,7 +141,7 @@
 <table>
 	<tr>
 	<td class="warn_head">PLEASE</td>
-	<td>... don't make health care decisions based on this report, alone. We're not doctors. The data presented here are for the purpose of broad consideration. Information on particular drugs should not be considered exhaustive or necessarily applicable to your individual health.</td>
+	<td>... don't make health care decisions based on this report alone. We're not doctors. The data presented here are for the purpose of broad consideration. Information on particular drugs should not be considered exhaustive or necessarily applicable to your individual health.</td>
 	</tr>
 </table>
 </div>
