--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -31,9 +31,15 @@
 <img style="width: 950px; ;" src="{% static 'rx/image/red and blues_tall.png' %}">
 <h1>The Script Report</h1>
 
-<p>{{ share_url }} riverrun, past Eve and Adam’s, from swerve of shore to bend of bay, brings us by a commodius vicus of recirculation back to Howth Castle and Environs.
+<p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the ever-increasing variety of modern psychotropic medicines, a pet name. Some a product of abuse; others, fondness.
 
-<p>Sir Tristram, violer d’amores, fr’over the short sea, had passen-core rearrived from North Armorica on this side the scraggy isthmus of Europe Minor to wielderfight his penisolate war: nor had topsawyer’s rocks by the stream Oconee exaggerated themselse to Laurens County’s gorgios while they went doublin their mumper all the time: nor avoice from afire bellowsed mishe mishe to tauftauf thuartpeatrick not yet, though venissoon after, had a kidscad buttended a bland old isaac: not yet, though all’s fair in vanessy, were sosie sesthers wroth with twone nathandjoe. Rot a peck of pa’s malt had Jhem or Shen brewed by arclight and rory end to the regginbrow was to be seen ringsome on the aquaface.
+<p>Recent studies have cited stark upward trends in prescription drug consumption by patients in Western nations, specifically among chemicals that act on the central nervous system, including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks for developing dependence alongside potentially severe side-effects up to a fatal overdose.
+
+<p>The Script Report is an attempt to use data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
+
+<p>Prescribing data recently released for April though September last year are specific to each general practitioner in Northern Ireland, England and Wales, and to each drug and chemical presentation.
+
+<p>Use this site to explore facts and statistics for individual drugs and overall prescribing rates for GPs. 
 
 
 
@@ -194,7 +200,7 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 </div>
 
 
-<h2 style='clear:left;'>Analgesics and Sedatives</h2>
+<h2 style='clear:left;'>Opioid Painkillers and Sleep Aids</h2>
 
 <p>Bygmester Finnegan, of the Stuttering Hand, freemen’s mau-rer, lived in the broadest way immarginable in his rushlit toofar — back for messuages before joshuan judges had given us numbers or Helviticus committed deuteronomy (one yeastyday he sternely struxk his tete in a tub for to watsch the future of his fates but ere he swiftly stook it out again, by the might of moses, the very wat-er was eviparated and all the guenneses had met their exodus so that ought to show you what a pentschanjeuchy chap he was!) and during mighty odd years this man of hod, cement and edi-fices in Toper’s Thorp piled buildung supra buildung pon the banks for the livers by the Soangso. He addle liddle phifie Annie ugged the little craythur. Wither hayre in honds tuck up your part inher. Oftwhile balbulous, mithre ahead, with goodly trowel in grasp and ivoroiled overalls which he habitacularly fondseed, like Haroun Childeric Eggeberth he would caligulate by multiplicab-les the alltitude and malltitude until he seesaw by neatlight of the liquor wheretwin ’twas born, his roundhead staple of other days to rise in undress maisonry upstanded (joygrantit!), a waalworth of a skyerscape of most eyeful hoyth entowerly, erigenating from next to nothing and celescalating the himals and all, hierarchitec-titiptitoploftical, with a burning bush abob off its baubletop and with larrons o’toolers clittering up and tombles a’buckets clottering down.</p>
 
