--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -31,15 +31,21 @@
 <img style="width: 950px; ;" src="{% static 'rx/image/red and blues_tall.png' %}">
 <h1>The Script Report</h1>
 
-<p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the ever-increasing variety of modern psychotropic medicines, a pet name. Some a product of abuse; others, fondness.
+<p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
 
-<p>Recent studies have cited stark upward trends in prescription drug consumption by patients in Western nations, specifically among chemicals that act on the central nervous system, including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks for developing dependence alongside potentially severe side-effects up to a fatal overdose.
+<p><a href=”http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends” target=”_blank”>Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose.
 
-<p>The Script Report is an attempt to use data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
+<p>Street-level trade of prescription pills has also increased while <a href=”http://www.bbc.co.uk/news/uk-northern-ireland-25058728” target=”_blank”>pharmaceutical supply chains have become wholesale targets of dealers</a>.
 
-<p>Prescribing data recently released for April though September last year are specific to each general practitioner in Northern Ireland, England and Wales, and to each drug and chemical presentation.
+<p>The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
-<p>Use this site to explore facts and statistics for individual drugs and overall prescribing rates for GPs. 
+<p>Monthly prescribing data for Northern Irish GPs are now released quarterly. With data already available for April though September 2013, The Detail looked at drugs in four categories of medication: antidepressants, anti-anxiety drugs, sedatives and opioid painkillers.
+
+<p>In all four categories, Northern Ireland outpaced other UK countries in its per person rate of drug consumption.
+
+<p>The Detail also compared prescription rates within the level of economic disadvantage a GP's local community faces using each country's index of multiple deprivation scores.
+
+<p>Use this site to explore facts and statistics for individual drugs as well as overall prescribing trends at GPs across Northern Ireland.
 
 
 
@@ -200,12 +206,12 @@ The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ir
 </div>
 
 
-<h2 style='clear:left;'>Opioid Painkillers and Sleep Aids</h2>
+<h2 style='clear:left;'>Opioid Painkillers and Sedatives</h2>
 
 <p>Bygmester Finnegan, of the Stuttering Hand, freemen’s mau-rer, lived in the broadest way immarginable in his rushlit toofar — back for messuages before joshuan judges had given us numbers or Helviticus committed deuteronomy (one yeastyday he sternely struxk his tete in a tub for to watsch the future of his fates but ere he swiftly stook it out again, by the might of moses, the very wat-er was eviparated and all the guenneses had met their exodus so that ought to show you what a pentschanjeuchy chap he was!) and during mighty odd years this man of hod, cement and edi-fices in Toper’s Thorp piled buildung supra buildung pon the banks for the livers by the Soangso. He addle liddle phifie Annie ugged the little craythur. Wither hayre in honds tuck up your part inher. Oftwhile balbulous, mithre ahead, with goodly trowel in grasp and ivoroiled overalls which he habitacularly fondseed, like Haroun Childeric Eggeberth he would caligulate by multiplicab-les the alltitude and malltitude until he seesaw by neatlight of the liquor wheretwin ’twas born, his roundhead staple of other days to rise in undress maisonry upstanded (joygrantit!), a waalworth of a skyerscape of most eyeful hoyth entowerly, erigenating from next to nothing and celescalating the himals and all, hierarchitec-titiptitoploftical, with a burning bush abob off its baubletop and with larrons o’toolers clittering up and tombles a’buckets clottering down.</p>
 
 <div class="drugs_list">
-<h4>More about common analgesics and sedatives like:</h4>
+<h4>More about common opioid painkillers and sedatives like:</h4>
 <ul>
 	<li>
 		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Maxitram, Mabron and Zydol
