--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -33,9 +33,9 @@
 
 <p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
 
-<p><a href=”http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends” target=”_blank”>Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose.
+<p><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose.
 
-<p>Street-level trade of prescription pills has also increased while <a href=”http://www.bbc.co.uk/news/uk-northern-ireland-25058728” target=”_blank”>pharmaceutical supply chains have become wholesale targets of dealers</a>.
+<p>Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
 
 <p>The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
