--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -33,20 +33,53 @@
 
 <p>Happy pills, benzos, tranqs, cotton, mother's little helper, dreamy-sleepy-nightie-snoozy-snooze. For every pill in the growing variety of modern psychotropic medication, a pet name. Some a product of abuse; others, fondness.
 
-<p><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose.
-
-<p>Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
+<p><a href="http://www.theguardian.com/news/2013/nov/20/mental-health-antidepressants-global-trends" target="_blank">Recent international studies</a> have cited stark upward trends in prescription drug consumption, especially of chemicals that act on the central nervous system including antidepressants, anti-anxiety drugs, sleep aids and opioid painkillers. Some of these medications carry significant risks of addiction alongside potentially severe side-effects up to fatal overdose. Street-level trade of prescription pills has also increased while <a href="http://www.bbc.co.uk/news/uk-northern-ireland-25058728" target="_blank">pharmaceutical supply chains have become wholesale targets of dealers</a>.
 
 <p>The Script Report uses general practitioner prescribing data recently made available to contextualize just how many of these types of drugs are regularly prescribed and consumed in Northern Ireland. Data available in other parts of the UK — England and Wales — also make it possible to form a basis for comparison within broadly similar health care systems.
 
 <p>Monthly prescribing data for Northern Irish GPs are now released quarterly. With data already available for April though September 2013, The Detail looked at drugs in four categories of medication: antidepressants, anti-anxiety drugs, sedatives and opioid painkillers.
 
-<p>In all four categories, Northern Ireland outpaced other UK countries in its per person rate of drug consumption.
+<p>In all four categories, Northern Ireland outpaced other UK countries in its per person rate of drug consumption. The Detail also compared prescription rates within the level of economic disadvantage a GP's local community faces.
 
-<p>The Detail also compared prescription rates within the level of economic disadvantage a GP's local community faces using each country's index of multiple deprivation scores.
+<p>You can use this site to explore facts and statistics for individual drugs as well as overall prescribing trends at GPs across Northern Ireland, but first...
 
-<p>Use this site to explore facts and statistics for individual drugs as well as overall prescribing trends at GPs across Northern Ireland.
+<h3>Two important concepts to understand</h3>
 
+<table id="instruct_table">
+<colgroup>
+	<col width="300px">
+	<col>
+</colgroup>
+
+<tr>
+<td class="instruct_td_head">Defined Daily Dose</td>
+<td class="instruct_td_text">
+	<p>Per the World Health Organization:
+	<blockquote cite="http://www.whocc.no/ddd/definition_and_general_considera/">
+		<p>The Defined Daily Dose is the assumed average maintenance dose per day for a drug used for its main indication in adults.</p>
+	</blockquote> 
+
+	<p>The Detail used the Defined Daily Dose (or just "daily dose") to make different drugs prescribed at different strengths comparable. For example, diazepam has a Defined Daily Dose of 10mg. So 10 diazepam pills at the 20mg dosage are evaluated the same as 5 pills at 40mg: 40 daily doses. 
+	<p>The daily dose is a statistical average and not a prescribing guide. Doctors prescribe different daily regimens based on individual patients and their particular conditions.
+</td>
+</tr>
+
+<tr>
+<td class="instruct_td_head">Deprivation</td>
+<td class="instruct_td_text">
+	<p>National statistics agencies in the UK estimate the level of economic hardship in a community using statistical measures known as indexes of deprivation. The poorer the economic opportunities in an area, the more deprived it's said to be.
+	<p>The Detail grouped GPs into four categories based on the level of deprivation in their local community to make the most exacting comparisons possible of their prescription rates.
+	<p>The groups range:
+	<ul>
+	<li>Least Deprived GPs are in some of the wealthiest areas</li>
+	<li>Less Deprived</li>
+	<li>More Deprived</li>
+	<li>Most Deprived GPs are in some of the poorest areas</li>
+	</ul> 
+</td>
+</tr>
+
+</table>
 
 
 
